# tfm

./: .gitignore  Dockerfile  README.md  data  pyproject.toml  requirements.txt  run_exp.py
tfm/: GoogleRegressionCoefficientAnalysisTask1And2.ipynb  constants.py  convert.py  main.py  pd.py  regression.ipynb  samplers.py
tfm/notebooks/: correlation.ipynb  distribution.ipynb  explore.ipynb  label_list.pickle  nb_utils.py  nonstat.ipynb  pd_times.ipynb  regression.ipynb  scatter.ipynb
tfm/notebooks/utils/: __init__.py  experiments.py  names.py
tfm/ruben/: __init__.py
tfm/utils/: __init__.py  timertree.py
